@@ -1,3 +1,6 @@
 
 2013-07-11 v0.0.1 clinton at omniti dot com
+  * nad_script LWRP
+  * configure (ports, conf dir) under ubuntu
+  * install under ubuntu from omnibus tarball
   * initial work
